k8s/ml-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
spec:
  selector:
    app: ml-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
